tests/errors/bad_type_assign.ptt
use std/string

spark {
  x is 10
  x be "hello"
}
